2005-05-11  Roland Illig  <roland.illig@gmx.de>

	* charsets.c (translate_character): Fixed checking of the return
	value of iconv().

2005-05-10  Pavel Roskin  <proski@gnu.org>

	* .c: Sanitize all calls to functions from ctype.h.  Fix gcc 4.0
	warnings.

	* file.c: Remove unneeded WANT_WIDGETS.
	* layout.c: Likewise.
	* setup.c: Likewise.
	* view.c: Likewise.

2005-05-10  Roland Illig  <roland.illig@gmx.de>

	* find.c (find_parameters): Moved around and reordered dialog
	items to make their meaning clearer.

2005-04-03  Pavel Roskin  <proski@gnu.org>

	* screen.c (try_to_select): Don't call display_mini_info(), it
	will be called later because select_item sets panel->dirty.
	This fixes the mini status appearing first after Ctrl-O.

2005-04-27  Roland Illig  <roland.illig@gmx.de>

	* view.c: Changed use of view->text_wrap_mode to reflect its
	type, being gboolean. That is, only use boolean operators and
	TRUE/FALSE for assignment. Bug reported by Jindrich Makovicka.

2005-04-26  Roland Illig  <roland.illig@gmx.de>

	* view.c: Added some calls to str_unconst() to get rid of the
	GCC warnings.
	* global.h: Define NDEBUG (used by assert() depending on
	MC_ENABLE_DEBUGGING_CODE).

2005-04-25  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_move_forward2): Fixed a bug related to the return
	value, which had made the down and page-down keys no-ops.
	* view.c (init_growing_view): Renamed to
	view_load_command_output(). Removed dead code. Removed unused
	parameter.
	* view.c (offset_type): Adjusted the PRI[dX] constants to be
	like the ISO C99 PRI* constants.
	* view.c (struct WView): Replaced view->last with
	view->dpy_complete. The former variable's name didn't match its
	value.

2005-04-22  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_move_forward2): Fixed a bug discovered by
	Jindrich Makovicka. The return value did not take into account
	the value of the `upto' parameter.
	* view.c (view_move_forward2): Added more assertions. Rewrote